--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.jaredrummler:material-spinner:1.1.0'
     compile 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    compile 'com.victor:lib:1.0.4'
 }
 
 apply plugin: 'com.google.gms.google-services'
